package com.qr_restaurant.order.enums;

public enum OrderStatus {
    PENDING,
    CONFIRMED,
    READY,
    SERVED,
    CANCELLED,
}
